--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "book-app",
+  "name": "book-app-raji-rasheed",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
@@ -21,6 +21,9 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@fortawesome/free-solid-svg-icons": "^5.7.2",
+    "@ng-bootstrap/ng-bootstrap": "^1.1.2",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
@@ -29,6 +32,7 @@
     "@angular/cli": "~1.7.4",
     "@angular/compiler-cli": "^5.2.0",
     "@angular/language-service": "^5.2.0",
+    "@fortawesome/fontawesome-free": "^5.7.2",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
